src/abacus/src/commerce/dal/snapshots/server__commerce__dal__product_categories_tests__get_product_categories_by_ids_test-2.snap
---
source: src/commerce/dal/product_categories_tests.rs
expression: found_categories_en
---
[
    Some(
        ProductCategory {
            name: Some(
                "café",
            ),
            translations: [
                ProductCategoryMultilingualTranslations {
                    locale: EnUS,
                    name: "coffee",
                },
                ProductCategoryMultilingualTranslations {
                    locale: EsMX,
                    name: "café",
                },
            ],
        },
    ),
]
