src/abacus/src/commerce/dal/snapshots/server__commerce__dal__product_categories_tests__search_all_product_categories_test.snap
---
source: src/commerce/dal/product_categories_tests.rs
expression: found_categories_en
---
[
    Some(
        ProductCategory {
            name: Some(
                "coffee",
            ),
            translations: [
                ProductCategoryMultilingualTranslations {
                    locale: EnUS,
                    name: "coffee",
                },
                ProductCategoryMultilingualTranslations {
                    locale: EsMX,
                    name: "café",
                },
            ],
        },
    ),
    Some(
        ProductCategory {
            name: Some(
                "tea",
            ),
            translations: [
                ProductCategoryMultilingualTranslations {
                    locale: EnUS,
                    name: "tea",
                },
                ProductCategoryMultilingualTranslations {
                    locale: EsMX,
                    name: "té",
                },
            ],
        },
    ),
    Some(
        ProductCategory {
            name: Some(
                "dumplings",
            ),
            translations: [
                ProductCategoryMultilingualTranslations {
                    locale: EnUS,
                    name: "dumplings",
                },
                ProductCategoryMultilingualTranslations {
                    locale: EsMX,
                    name: "dumplings",
                },
            ],
        },
    ),
    Some(
        ProductCategory {
            name: Some(
                "other",
            ),
            translations: [
                ProductCategoryMultilingualTranslations {
                    locale: EnUS,
                    name: "other",
                },
                ProductCategoryMultilingualTranslations {
                    locale: EsMX,
                    name: "otro",
                },
            ],
        },
    ),
]
